--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roman', sans-serif;
+  font-family: sans-serif;
   background-color: #ffffff;
   box-sizing: border-box;
   color: #35465d;
