--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ border-radius: 50%;
 
 #about-sec {
     color:#fff;
+	 text-align:center;
     background-color:#5aabe0;
 }
 /*======================================
